Efter hämtning av RCs ändringar på ftp

--- a/partials/about.html
+++ b/partials/about.html
@@ -45,7 +45,7 @@
 			<div class="jumbotron">
 				<h2 class="dark-text">Vår filosofi</h2>
 				<p>
-					Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
+					Du som patient ska känna att du är i fokus – därför är vi alltid lyhörda och förstående för dig och dina behov. Målet är att du ska ha en frisk mun livet ut och det ska vara en positiv upplevelse att besöka oss på Beiring Tandklinik. Vi är en modern tandvårdsklinik som ständigt jobbar för att göra nya förbättringar. Du kan vara säker på att vården som vi rekommenderar alltid är den bästa tänkbara för dig som enskild individ. Detta sätter vi en stor yrkesstolthet i.
 				</p>
 			</div>
 		</div>
@@ -58,9 +58,9 @@
 	<div class="row">
 		<div class="col-md-6">
 			<div class="jumbotron">
-				<h2 class="dark-text">Vår filosofi</h2>
+				<h2 class="dark-text">Dina tänder är vår livsuppgift</h2>
 				<p>
-					Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
+					Vi jobbar helst av allt förebyggande och målet är att motverka problem med dina tänder och mun. Om det finns behov av reparationer och lagningar, arbetar vi alltid efter principerna med minsta invasiva behandlingen. Det innebär bland annat att vi försöker borra så lite som möjligt på dina tänder. Material, kunskap och teknologi är alltid uppdaterade på våra kliniker, för att du ska få det bästa för dina tänder. Och givetvis för att vi tycker att det är väldigt roligt att ständigt utvecklas i våra yrken.
 				</p>
 			</div>
 		</div>
@@ -83,7 +83,7 @@
 		<div class="row">
 			<div class="col-md-2">
 				<div class="person text-center">
-					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+					<img src="img/martin_beiring.png" class="img-circle img-responsive">
 
 					<h4>Martin Beiring</h4>
 					<p>
@@ -96,7 +96,7 @@
 				<div class="person text-center">
 					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
 
-					<h4>Martin Beiring</h4>
+					<h4>Daniel Edgren</h4>
 					<p>
 						Tandläkare
 					</p>
@@ -105,9 +105,9 @@
 
 			<div class="col-md-2">
 				<div class="person text-center">
-					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+					<img src="img/sofie_mostl.png" class="img-circle img-responsive">
 
-					<h4>Martin Beiring</h4>
+					<h4>Sofie Mostl</h4>
 					<p>
 						Tandläkare
 					</p>
@@ -116,9 +116,9 @@
 
 			<div class="col-md-2">
 				<div class="person text-center">
-					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+					<img src="img/jasmina_aurnatouvic.png" class="img-circle img-responsive">
 
-					<h4>Martin Beiring</h4>
+					<h4>Jasmina Aurnatouvic</h4>
 					<p>
 						Tandläkare
 					</p>
