--- a/partials/allman-tandvard.html
+++ b/partials/allman-tandvard.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Allmän Tandvård</h2>
-				<p>Efter den första undersökningen utarbetar vi en personlig plan för just dina behov. </p>
+				<h3>Efter den första undersökningen utarbetar vi en personlig plan för just dina behov. </h3>
 
 <p>Allmän tandvård handlar om alla de vanliga ingrepp och undersökningar som du säkert associerar med ett tandläkarbesök. Som till exempel regelbundna undersökningar, förebyggande behandlingar, rotfyllningar, lagningar eller tandutdragningar. Alla människor har olika behov för att underhålla och behandla sina tänder. Har du aldrig haft hål eller problem med dina tänder så är det viktigaste för dig att förebygga så att skador inte uppkommer. En stor del av tandvården hos oss idag går åt till att rengöra, informera och instruera så att du kan fortsätta att hålla din mun frisk och ditt leende oförändrat. Vi märker att våra patienter får allt mindre nya skador på sina tänder när de följer de råd och behandlingar som vi rekommenderar. Att gå regelbundet på undersökningar och att besöka våra tandhygienister är en viktig investering för att få behålla sina egna tänder opåverkade så länge som möjligt.</p>
 
@@ -28,11 +28,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Free translator
+						Free interpreter
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><img src="img/bild_1234.png" class="img-responsive"></div>
 					<p class="caption">
-						If you would like a translator to assist with your dental procedure we provide this service free of charge.
+						If you would like an interpreter to assist with your dental procedure we provide this service free of charge.
 					</p>
 				</div>
 			</div>			
@@ -54,7 +54,7 @@
 					<h3>
 						<a href="https://www.facebook.com/beiringtandklinik" target="_blank">Hitta oss på Facebook</a>
 					</h3>
-					<div class="box"><a href="https://www.facebook.com/beiringtandklinik" target="_blank"><img src="img/lokal_facebook.png" width="100%" height="100%"></a></div>
+					<div class="box"><a href="https://www.facebook.com/beiringtandklinik" target="_blank"><img src="img/grey_facebook.png" class="img-responsive"></a></div>
 					<p class="caption">
 						Här hittar du tips, råd och speciella erbjudanden - <a href="https://www.facebook.com/beiringtandklinik" target="_blank">klicka här.</a>
 					</p>
