--- a/partials/behandlingar.html
+++ b/partials/behandlingar.html
@@ -18,7 +18,7 @@
 					<h3>
 						<a href="behandlingar/allman-tandvard">Allmän tandvård</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="behandlingar/allman-tandvard"><img src="img/allmant.png" class="img-responsive" /></a> </div>
 					<p class="caption">
 						Efter den första undersökningen utarbetar vi en personlig plan för just dina behov. Läs mer om <a href="behandlingar/allman-tandvard">allmän tandvård.</a>
 					</p>
@@ -28,11 +28,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						<a href="behandlingar/forebyggande-tandvard-och-tandhygienist">Förebyggande tandvård</a>
+						<a href="behandlingar/forebyggande-tandvard-och-tandhygienist">Tandhygienist</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="behandlingar/forebyggande-tandvard-och-tandhygienist"><img src="img/forebyggande.png" class="img-responsive" /></a> </div>
 					<p class="caption">
-						Regelbundna undersökningar och besök hos våra tandhygienister är en bra investering i det långa loppet. <a href="behandlingar/forebyggande-tandvard-och-tandhygienist">Läs mer om förebyggande tandvård.</a>
+						Regelbundna besök hos våra tandhygienister är en bra investering i det långa loppet. <a href="behandlingar/forebyggande-tandvard-och-tandhygienist">Läs mer här.</a>
 					</p>
 				</div>
 			</div>			
@@ -42,7 +42,7 @@
 					<h3>
 						<a href="behandlingar/tandblekning">Tandblekning</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="behandlingar/tandblekning"><img src="img/tandblekning.png" class="img-responsive" /></a> </div>
 					<p class="caption">
 						Vi börjar med en undersökning, för att sedan rekommendera den metod som passar just dina tänder.<a href="behandlingar/tandblekning"> Läs mer om tandblekning.</a>
 					</p>
@@ -57,9 +57,9 @@
 					<h3>
 						<a href="behandlingar/bettskena">Bettskena</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="behandlingar/bettskena"><img src="img/bettskena.png" class="img-responsive" /></a> </div>
 					<p class="caption">
-						Tandgnissel stör sömnen och kan ge huvud- eller muskelvärk. En bettskena avlastar tänderna och undviker onödigt slitage om nätterna. <a href="behandlingar/bettskena">Läs mer om Bettskena.</a>
+						Tandgnissel stör sömnen och kan ge huvud- eller muskelvärk. En bettskena avlastar tänderna och undviker onödigt slitage om nätterna. <a href="behandlingar/bettskena">Läs mer om bettskena.</a>
 					</p>
 				</div>
 			</div>			
@@ -69,7 +69,7 @@
 					<h3>
 						<a href="behandlingar/visdomtandskirurgi">Visdomstandskirurgi</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="behandlingar/visdomtandskirurgi"><img src="img/visdomstand.png" class="img-responsive" /></a> </div>
 					<p class="caption">
 						Ibland måste visdomständerna opereras bort. Vi ser till att det blir så smidigt och smärtfritt som möjligt. <a href="behandlingar/visdomtandskirurgi">Läs mer om visdomstandskirurgi</a>
 					</p>
@@ -81,9 +81,9 @@
 					<h3>
 						<a href="behandlingar/tandimplantat">Tandimplantat</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="behandlingar/tandimplantat"><img src="img/tandimplantat.png" class="img-responsive" /></a></div>
 					<p class="caption">
-						Vi har rätt kunskap och verktyg för att återskapa ditt bett och leende. <a href="behandlingar/tandimplantat">Mer om tandimplantat, läs mer.</a>
+						Vi har rätt kunskap och verktyg för att återskapa ditt bett och leende. <a href="behandlingar/tandimplantat">Läs mer om tandimplantat.</a>
 					</p>
 				</div>
 			</div>			
@@ -94,7 +94,7 @@
 					<h3>
 						<a href="behandlingar/tandreglering">Tandreglering</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="behandlingar/tandreglering"><img src="img/tandreglering.png" class="img-responsive" /></a></div>
 					<p class="caption">
 						Hos oss kan du få hjälp med allt från enkla justeringar till omfattande felställningar. <a href="behandlingar/tandreglering"> Läs mer om tandreglering.</a>
 					</p>
@@ -104,9 +104,9 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						<a href="behandlingar/estetisk-tandvard">Estetisk Tandvård</a>
+						<a href="behandlingar/estetisk-tandvard">Estetisk tandvård</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="behandlingar/estetisk-tandvard"><img src="img/estetik.png" class="img-responsive" /></a></div>
 					<p class="caption">
 						Genom att kombinera de bästa materialen med den senaste tekniken, skapar vi det leende du alltid drömt om. <a href="behandlingar/estetisk-tandvard">Läs mer om estetisk tandvård.</a>
 					</p>
@@ -118,9 +118,9 @@
 					<h3>
 						<a href="behandlingar/tandvardsradsla">Tandvårdsrädsla</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="behandlingar/tandvardsradsla"><img src="img/radsla.png" class="img-responsive" /></a></div>
 					<p class="caption">
-						Nästan alla känner viss rädsla för att gå till tandläkaren. Var tionde svensk låter bli helt att gå pga tandvårdsrädsla.  <a href="behandlingar/tandvardsradsla">Läs mer om tandvårdsrädsla.</a>
+						Nästan alla känner viss rädsla för att gå till tandläkaren. Var tionde svensk låter bli helt att gå på grund av det. Vi hjälper dig att känna lugn inför besöket. <a href="behandlingar/tandvardsradsla">Läs mer om tandvårdsrädsla.</a>
 					</p>
 				</div>
 			</div>	
