--- a/partials/bettskena.html
+++ b/partials/bettskena.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Bettskena</h2>
-				<p>Tandgnissel stör sömnen och kan ge huvud- eller muskelvärk. En bettskena avlastar tänderna och undviker onödigt slitage om nätterna.</p>
+				<h3>Tandgnissel stör sömnen och kan ge huvud- eller muskelvärk. En bettskena avlastar tänderna och undviker onödigt slitage om nätterna.</h3>
 
 <p>I perioder av stress kan spänningar i nackens och axlarnas muskulatur sprida sig upp mot huvud- och käkmuskulaturen, vilket gör att vi "biter ihop" mer. Det kan resultera i att vi gnisslar eller pressar tänderna. Tänderna ska bara vara i naturlig kontakt med varandra när vi äter och all ytterligare påfrestning gör att våra tänder slits mer. Det påverkar både tandemalj och tidigare gjorda konstruktioner, som kan få en kortare livslängd. I många fall leder den överarbetade tugg- och bitmuskulaturen dessutom till återkommande huvudvärk. </p>
 
@@ -26,11 +26,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						Free interpreter
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><img src="img/bild_1234.png" class="img-responsive"></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						If you would like an interpreter to assist with your dental procedure we provide this service free of charge.
 					</p>
 				</div>
 			</div>			
@@ -50,11 +50,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						<a href="https://www.facebook.com/beiringtandklinik" target="_blank">Hitta oss på Facebook</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="https://www.facebook.com/beiringtandklinik" target="_blank"><img src="img/grey_facebook.png" class="img-responsive"></a></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Här hittar du tips, råd och speciella erbjudanden - <a href="https://www.facebook.com/beiringtandklinik" target="_blank">klicka här.</a>
 					</p>
 				</div>
 			</div>			
