--- a/partials/forebyggande-tandvard-och-tandhygienist.html
+++ b/partials/forebyggande-tandvard-och-tandhygienist.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Förebyggande tandvård</h2>
-				<p>Regelbundna undersökningar och besök hos våra tandhygienister är en bra investering i det långa loppet.</p>
+				<h3>Regelbundna undersökningar och besök hos våra tandhygienister är en bra investering i det långa loppet.</h3>
 
 <p>Att förebygga skador på din tandemalj eller runt fästena på dina tänder är det viktigaste och vårt huvudmål för oss som jobbar med tandhälsa. Det finns två stora sjukdomar inom odontologin, den första och mest kända är att få karies eller hål i tänderna och många frågar oss om detta då man kommer på undersökningar. Karies är en skada som man ibland kan känna av själv då det plötsligt kan börja isa i tanden eller att man börjar få tandvärk i den. När tanden börjar värka så är skadan oftast djupt in mot nerven och om nerven är infekterad med kariesbakterier, så behöver tanden en rotfyllning. Det bästa för dina tänder är att fånga upp karies när det är i sitt tidiga stadie och det fortfarande har chansen att "stanna av" och läka ut, vilket man vet är möjligt. För att få karies att stanna av så är det viktigt att man håller rent runt skadan med tandborste och tandtråd samt att man tänker på att inte ha en för hög kostfrekvens då detta påverkar dina tänder negativt. Individuella råd för din tandhygien skapas hos tandläkare och tandhygienist för att vi ska slippa att behöva borra i dina tänder.</p>
 
@@ -31,11 +31,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						Free interpreter
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><img src="img/bild_1234.png" class="img-responsive"></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						If you would like an interpreter to assist with your dental procedure we provide this service free of charge.
 					</p>
 				</div>
 			</div>			
@@ -55,11 +55,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						<a href="https://www.facebook.com/beiringtandklinik" target="_blank">Hitta oss på Facebook</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="https://www.facebook.com/beiringtandklinik" target="_blank"><img src="img/grey_facebook.png" class="img-responsive"></a></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Här hittar du tips, råd och speciella erbjudanden - <a href="https://www.facebook.com/beiringtandklinik" target="_blank">klicka här.</a>
 					</p>
 				</div>
 			</div>			
