--- a/partials/priser.html
+++ b/partials/priser.html
@@ -5,18 +5,14 @@
 			<div class="col-md-6">
 				<h3>Priser och finansering</h3>
 
-				<p>Det slutgiltiga kostnaden för en behandling kan inte alltid räknas ut genom att lägga ihop diverse åtgärdskoder, då det beror på hur högt man har kommit i sin karensnivå. En basundersökning och diagnostik, utförd av tandläkare, kostar 880 kronor.</p>
+				<p>En basundersökning och diagnostik, utförd av tandläkare, kostar 880 kronor. Den slutgiltiga kostnaden för en behandling kan inte alltid räknas ut genom att lägga ihop diverse åtgärdskoder, då det beror på hur högt du har kommit i din karensnivå.</p>
 
 				<h3>Finansiering</h3>
-				<p>Tillsammans med Wasa Kredit, ett bolag inom länsförsäkringsgruppen, kan vi
-				erbjuda dig en räntefri delbetalning upp till 36 månader. Finansieringen är
-				enkel  och förmånlig för dig som kund och du väljer själv vilket upplägg som
-				passar bäst. Ni kan lösa lånet eller extra amortera när ni vill utan några
-				avgifter. Vi gör en ansökan för dig och ni får svar inom någon minut.</p>
+				<p>Tillsammans med Wasa Kredit, ett bolag inom Länsförsäkringsgruppen, kan vi erbjuda dig en räntefri delbetalning upp till 36 månader. Finansieringen är enkel och förmånlig för dig som kund och du väljer själv vilket upplägg som passar bäst. Du kan lösa lånet eller extraamortera när du vill och utan några avgifter. Vi gör en ansökan för dig och du får svar inom någon minut.</p>
 
 				<h3>Unga vuxna 20-24 år</h3>
 
-				<p>Unga vuxna har kostnadsfri tandvård upptill 24 år ålder om man är bosatt och folkbokförd i Västra Götalands regionen. Läs mer på Tandvårdsenheten här. För tillfället har vi valt att inte förnya vårt avtal med Västra Götalandsregionen, så i dagsläget går det inte att lista sig för fri tandvård som Ung vuxen hos oss. Detta innebär att du oavsett ålder betalar ordinarie klinikpriser för dina behandlingar, men du har fortfarande ditt Allmänna Tandvårds Bidrag som stöd för undersökning eller behandling.</p>
+				<p>Unga vuxna har kostnadsfri tandvård upptill 24 år ålder, om du är bosatt och folkbokförd i Västra Götalandsregionen. <a href="http://www.vgregion.se/sv/Vastra-Gotalandsregionen/Tandvardsenheten/" target="_blank">Läs mer på Tandvårdsenheten här.</a> För tillfället har vi valt att inte förnya vårt avtal med Västra Götalandsregionen, så i dagsläget går det inte att lista sig för fri tandvård som Ung vuxen hos oss. Detta innebär att du oavsett ålder, betalar ordinarie klinikpriser för dina behandlingar. Men du har fortfarande möjlighet till <a href="http://www.forsakringskassan.se/tandvard/statligt_tandvardsstod/allmant_tandvardsbidrag/allmant_tandvardsbidrag" target="_blank">Allmänna Tandvårdsbidraget</a> (ATB) som stöd för undersökning eller behandling.</p>
 
 
 
