--- a/partials/start.html
+++ b/partials/start.html
@@ -19,7 +19,7 @@
 		<div class="jumbotron text-center">
 			<h1>Letar du tandläkare i Göteborg?</h1>
 			<p>
-				Beiring tandklinik vill skapa långsiktiga patientrelationer genom att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat här hos oss – akuttandläkare, specialister och tandtekniker.
+				Vi arbetar för långsiktiga patientrelationer genom att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat här hos oss – akuttandläkare, specialister och tandtekniker. Välkommen till Beiring Tandklinik!
 			</p>
 
 			<p>
