--- a/partials/tandreglering.html
+++ b/partials/tandreglering.html
@@ -1,6 +1,89 @@
 <section class="light container-fluid">
 	<div class="narrow">
-		<h3>Tandreglering</h3>
-		<p>Stuff here</p>
+		<div class="row">
+			<div class="col-md-6">
+				<h2>Tandreglering</h2>
+				<h3>Vi på Beiring Tandklinik är specialiserade på modern tandreglering. Idag finns det flera metoder att välja mellan när du ska justera ditt bett och leende. Här kan du läsa mer om de som vi arbetar med. </h3>
+			</br>
+
+<h4>Incognito - tandreglering från insidan av tandraden</h4>
+<p>Via vår specialist har vi på Beiring Tandklinik stor erfarenhet av Incognito – behandlingsmetoden där tandreglering sker på insidan av tandraden. <a href="behandlingar/incognito">Läs mer här.</a></p>
+</br>
+
+<h4>Invisalign Aligner – diskreta plastskenor för små bettfel</h4>
+<p>Invisalign Aligner är en mindre synlig metod, som kan användas för att jämna till små bettfel. <a href="behandlingar/invisalign">Läs mer här.</a></p>
+</br>
+
+<h4>Inman Aligner – snabbaste sättet att få framtänderna på rad</h4>
+<p>Med Inman Aligner kan vi justera trångställningar, snedställningar och glesställningar som rör framtänderna.  <a href="behandlingar/inman">Läs mer här.</a></p>
+</br>
+
+<h4>Klassisk tandställning – den traditionella metoden</h4>
+<p>Med klassisk tandställning(räls) menas att man har tandställningen på utsidan av tänderna.</p>
+
+<p>Med klassisk tandställning går alla bettfel och tandfelställningar att korrigera. Även denna teknik har utvecklats och vi arbetar idag med porslinsfästen på framtänderna som göra att själva tandställningen blir mindre synlig.</p>
+
+<h5>Hur fungerar klassisk tandställning?</h5>
+<p>Fästen(Brackets) limmas fast på tänderna. I dessa brackets lägg sedan olika ståltrådar som fästs med små gummiband. Tänderna kan sedan förflyttas utmed ståltråden in i en optimal position utifrån funktion och estetik.</p>
+
+<h5>Kan klassisk tandställning korrigera alla bettfel och felställningar?</h5>
+<p>Ja. Behandlingstiden varierar dock beroende på bettfelets omfattning men är en mycket säker metod för att nå ett gott behandlingsresultat.</p>
+
+
+			</div>
+			<div class="col-md-6">		
+				<img src="img/dentist.png" class="pull-right img-responsive" />
+			</div>
+		</div>
+	</div>
+</section>
+
+
+<section class="white container-fluid">
+	<div class="narrow">
+		<div class="row">
+			<div class="col-md-4">
+				<div class="tile">
+					<h3>
+						Incognito
+					</h3>
+					<div class="box"><img src="img/bild_1234.png" class="img-responsive"></div>
+					<p class="caption">
+						Läs mer om Incognito här.
+					</p>
+				</div>
+			</div>			
+
+			<div class="col-md-4">
+				<div class="tile">
+					<h3>
+						Inman
+					</h3>
+					<div class="box">&nbsp;</div>
+					<p class="caption">
+						Läs mer om Inman här.
+					</p>
+				</div>
+			</div>			
+
+			<div class="col-md-4">
+				<div class="tile">
+					<h3>
+						Invisalign
+					</h3>
+					<div class="box"><a href="https://www.facebook.com/beiringtandklinik" target="_blank"><img src="img/grey_facebook.png" class="img-responsive"></a></div>
+					<p class="caption">
+						Läs mer om Invisalign här.
+					</p>
+				</div>
+			</div>			
+		</div>
+
+	</div>
+</section>
+
+<section class="medium container-fluid">
+	<div class="narrow">
+		<div contact-horizontal></div>
 	</div>
 </section>
