--- a/partials/tandvardsradsla.html
+++ b/partials/tandvardsradsla.html
@@ -3,12 +3,11 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Tandvårdsrädsla</h2>
-				<p>Vi har rätt kunskap och verktyg för att återskapa ditt bett och leende.</p>
+				<h3>Nästan alla känner viss rädsla för att gå till tandläkaren. Var tionde svensk låter bli helt att gå på grund av det. Vi hjälper dig att känna lugn inför besöket.</h3>
 
-				<p>Hos oss så lyssnar vi på dig som patient. Vi vill först höra vad du har för besvär så att vi kan anpassa vården därefter.  Du bestämmer när du är redo för att gå vidare till undersökning/behandling. Väldigt många är tandvårdsrädda och det måste få ta tid att förstå patienten och anpassa behandlingen därefter. Vi har stor erfarenhet av att behandla tandvårdsrädda patienter.</p>
+				<p>Väldigt många är tandvårdsrädda och det måste få ta tid att förstå patienten och anpassa behandlingen därefter. Vi har stor erfarenhet av att behandla tandvårdsrädda patienter och vi lyssnar på dig som patient. Vi vill först höra vad du har för besvär så att vi kan anpassa vården därefter. Hur just du känner får komma fram i samtalen med din tandläkare. Därefter finns olika möjligheter att minska oron med samtal och information, tid och i vissa lägen även med lugnande läkemedel.</p>
 
-				<p>Nästan alla känner viss rädsla för att gå till tandläkaren. Var tionde svensk låter bli helt att gå  pga tandvårdsrädsla. Hur just du känner får komma fram i samtalen med din tandläkare och därefter har man olika möjligheter att minska oron med samtal och information, tid och i vissa lägen även med lugnande läkemedel innan behandling.
-				 </p>
+				<p>Du bestämmer när du är redo för att gå vidare till undersökning eller behandling. </p>
 
 			</div>
 			<div class="col-md-6">
@@ -25,11 +24,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						Free interpreter
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><img src="img/bild_1234.png" class="img-responsive"></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						If you would like an interpreter to assist with your dental procedure we provide this service free of charge.
 					</p>
 				</div>
 			</div>			
@@ -49,11 +48,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						<a href="https://www.facebook.com/beiringtandklinik" target="_blank">Hitta oss på Facebook</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="https://www.facebook.com/beiringtandklinik" target="_blank"><img src="img/grey_facebook.png" class="img-responsive"></a></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Här hittar du tips, råd och speciella erbjudanden - <a href="https://www.facebook.com/beiringtandklinik" target="_blank">klicka här.</a>
 					</p>
 				</div>
 			</div>			
