--- a/partials/estetisk-tandvard.html
+++ b/partials/estetisk-tandvard.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Estetisk Tandvård</h2>
-				<p>Genom att kombinera de bästa materialen med den senaste tekniken, skapar vi det leende du alltid drömt om.</p>
+				<h3>Genom att kombinera de bästa materialen med den senaste tekniken, skapar vi det leende du alltid drömt om.</h3>
 
 <p>Vi strävar alltid efter att vara minimalt invasiva i vårt arbete. Genom att behålla så mycket som möjligt av den egna tandvävnaden blir kvaliteten högre och hållbarheten längre. Skalfasader är den lösning där vi har mest möjlighet att ändra både form, position och färg på dina tänder. Porslinskonstruktionerna är oftast väldigt tunna, vilket gör att man inte behöver borra så mycket på den egna tanden för att skapa plats för materialet. I vissa fall behöver vi inte borra alls. Fördelarna med porslinsmaterial till skillnad från kompositfyllningar och de tidigare metallkeramiska kronorna, är dess ljusgenomsläpplighet/translucens. Våra skalfasader får tanden att se mer levande ut och motverkar att du får svarta skuggor vid tandköttskanten som tidigare tekniker kunde resultera i. </p>
 
@@ -26,11 +26,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						Free interpreter
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><img src="img/bild_1234.png" class="img-responsive"></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						If you would like an interpreter to assist with your dental procedure we provide this service free of charge.
 					</p>
 				</div>
 			</div>			
@@ -50,11 +50,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						<a href="https://www.facebook.com/beiringtandklinik" target="_blank">Hitta oss på Facebook</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="https://www.facebook.com/beiringtandklinik" target="_blank"><img src="img/grey_facebook.png" class="img-responsive"></a></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Här hittar du tips, råd och speciella erbjudanden - <a href="https://www.facebook.com/beiringtandklinik" target="_blank">klicka här.</a>
 					</p>
 				</div>
 			</div>			
