--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -34,7 +34,7 @@
                         </li>
 
                         <li ng-class="{ active: (isActive('/vardgivare'))}">
-                        	<a href="vardgivare">För Vårdgivare</a>
+                        	<a href="vardgivare">För vårdgivare</a>
                         </li>
 
                          <li ng-class="{ active: (isActive('/priser'))}">
