--- a/partials/tandblekning.html
+++ b/partials/tandblekning.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Tandblekning</h2>
-				<p>Vi börjar med en undersökning, för att sedan rekommendera den metod som passar just dina tänder.</p>
+				<h3>Vi börjar med en undersökning, för att sedan rekommendera den metod som passar just dina tänder.</h3>
 
 <p>Vi utför tandblekning med det amerikanska Zoomsystemet, som har en dokumenterat god effekt. Innan blekning måste du ha en nyligen gjord undersökning av dina tänder, då det annars kan finnas risker med att genomgå behandlingen. Det är viktigt att se så att tidigare fyllningar är intakta, så att blekningsgelen inte skadar eller retar nerven inne i tanden. Om det finns fyllningar på framtänderna så kan dessa komma att behöva att bytas ut då kompositmaterialen inte bleks på samma sätt som tanden. Innan blekningen så är det också viktigt att man får polerat bort missfärgningar och plackbeläggninar på tänderna så att behandlingen får maximal effekt.</p>
 
@@ -25,11 +25,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						Free interpreter
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><img src="img/bild_1234.png" class="img-responsive"></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						If you would like an interpreter to assist with your dental procedure we provide this service free of charge.
 					</p>
 				</div>
 			</div>			
@@ -49,11 +49,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						<a href="https://www.facebook.com/beiringtandklinik" target="_blank">Hitta oss på Facebook</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="https://www.facebook.com/beiringtandklinik" target="_blank"><img src="img/grey_facebook.png" class="img-responsive"></a></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Här hittar du tips, råd och speciella erbjudanden - <a href="https://www.facebook.com/beiringtandklinik" target="_blank">klicka här.</a>
 					</p>
 				</div>
 			</div>			
