--- a/partials/tandimplantat.html
+++ b/partials/tandimplantat.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Tandimplantat</h2>
-				<p>Vi har rätt kunskap och verktyg för att återskapa ditt bett och leende.</p>
+				<h3>Vi har rätt kunskap och verktyg för att återskapa ditt bett och leende.</h3>
 
 <p>Tandimplantat är en väldokumenterad behandling för att ersätta förlorade tänder och fördelarna är många. Det är mycket hög lyckandefrekvens och man kan undvika att borra på de närliggande tänderna, vilket man annars behöver om man ska preparera tänderna inför en brokonstruktion. Ett implantat fungerar som en ny tandrot. Du kan inte få karies på implantat eller kronan, men det är lika viktigt att hålla rent runt ett implantat med tandborste och tandtråd, så att det inte uppkommer skador på fästet till den nya "roten". </p>
 
@@ -28,11 +28,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						Free interpreter
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><img src="img/bild_1234.png" class="img-responsive"></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						If you would like an interpreter to assist with your dental procedure we provide this service free of charge.
 					</p>
 				</div>
 			</div>			
@@ -52,11 +52,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						<a href="https://www.facebook.com/beiringtandklinik" target="_blank">Hitta oss på Facebook</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="https://www.facebook.com/beiringtandklinik" target="_blank"><img src="img/grey_facebook.png" class="img-responsive"></a></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Här hittar du tips, råd och speciella erbjudanden - <a href="https://www.facebook.com/beiringtandklinik" target="_blank">klicka här.</a>
 					</p>
 				</div>
 			</div>			
