--- a/partials/vardgivare.html
+++ b/partials/vardgivare.html
@@ -2,15 +2,15 @@
 	<div class="narrow">
 		<div class="row">
 			<div class="col-md-6">
-				<h3>Nu kan du remittera patienter för ortodonti till vår specialist Johan Wetterqvist. </h3>
+				<h3>Nu kan du remittera patienter för ortodonti till vår specialist Johan Wetterqvist, eller för implantatbehandlingar till Martin Beiring.</h3>
 
-				<p>Om en till oss remitterad patient mot förmodan frågar om hon/han får fortsätta hos oss avvisar vi detta vänligt men bestämt och hänvisar tillbaka till remitterande tandläkare.</br></br>
+				<p>Om en remitterad patient efter sitt besök, mot förmodan frågar om hon/han får fortsätta hos oss, avvisar vi detta vänligt men bestämt. Vi hänvisar alltid tillbaka till remitterande tandläkare i första hand.</br></br>
 
 				Mejla oss på info@beiringtandklinik.se med namn och kontaktuppgifter.</p>
 			</div>
 				
 			<div class="col-md-6">
-				<img src="img/johanwetterqvist.png" class="pull-right img-responsive" />
+				<img src="img/martin_beiring.png" class="pull-right img-responsive" />
 			</div>
 		</div>
 	</div>
