--- a/partials/visdomtandskirurgi.html
+++ b/partials/visdomtandskirurgi.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Visdomtandskirurgi</h2>
-				<p>Ibland måste visdomständerna opereras bort. Vi ser till att det blir så smidigt och smärtfritt som möjligt.</p>
+				<h3>Ibland måste visdomständerna opereras bort. Vi ser till att det blir så smidigt och smärtfritt som möjligt.</h3>
 
 <p>Att avlägsna visdomständer kan ibland vara nödvändigt. Anledningen är att de ofta inte får plats i tandraden och börjar växa i en sådan riktning/position så risk finns för skada på tanden framför, som man använder när man tuggar. Visdomstanden kan även med sin position vara svår att hålla ren och försvåra renhållning av närliggande tand och skapa tandköttsfickor där det lätt blir inflammerat och infekterat. Dessa bakterier sprids sedan med saliven så att munhålan som helhet får mycket fler bakterier i sig. Symptom kan bli att du får illaluktande andedräkt, svullnad i området med problem att gapa och tugga och ibland feber med kraftig värk.</p>
 
@@ -28,11 +28,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						Free interpreter
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><img src="img/bild_1234.png" class="img-responsive"></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						If you would like an interpreter to assist with your dental procedure we provide this service free of charge.
 					</p>
 				</div>
 			</div>			
@@ -52,11 +52,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						<a href="https://www.facebook.com/beiringtandklinik" target="_blank">Hitta oss på Facebook</a>
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="https://www.facebook.com/beiringtandklinik" target="_blank"><img src="img/grey_facebook.png" class="img-responsive"></a></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Här hittar du tips, råd och speciella erbjudanden - <a href="https://www.facebook.com/beiringtandklinik" target="_blank">klicka här.</a>
 					</p>
 				</div>
 			</div>			
