After pull from ftp 20 sep

--- a/partials/about.html
+++ b/partials/about.html
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="col-xs-4">
 			<div class="">
-				<img class="img-responsive" src="img/3.jpg" />
+				<img class="img-responsive" src="img/reception.jpg" />
 			</div>
 		</div>			
 
@@ -15,7 +15,7 @@
 
 		<div class="col-xs-4">
 			<div class="">
-				<img class="img-responsive" src="img/3.jpg" />
+				<img class="img-responsive" src="img/tandhygienist.jpg" />
 			</div>
 		</div>			
 
@@ -105,9 +105,9 @@
 
 			<div class="col-md-2">
 				<div class="person text-center">
-					<img src="img/sofie_mostl.png" class="img-circle img-responsive">
+					<img src="img/christine_beiring.png" class="img-circle img-responsive">
 
-					<h4>Sofie Mostl</h4>
+					<h4>Christine Beiring</h4>
 					<p>
 						Tandläkare
 					</p>
@@ -120,29 +120,29 @@
 
 					<h4>Jasmina Aurnatouvic</h4>
 					<p>
-						Tandläkare
+						Tandsköterska
 					</p>
 				</div>
 			</div>
 
 			<div class="col-md-2">
 				<div class="person text-center">
-					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+					<img src="img/ingrid_asehall.png" class="img-circle img-responsive">
 
-					<h4>Martin Beiring</h4>
+					<h4>Ingrid Åsehåll</h4>
 					<p>
-						Tandläkare
+						Tandhygienist
 					</p>
 				</div>
 			</div>
 
 			<div class="col-md-2">
 				<div class="person text-center">
-					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+					<img src="img/anette_petersson.png" class="img-circle img-responsive">
 
-					<h4>Martin Beiring</h4>
+					<h4>Anette Petersson</h4>
 					<p>
-						Tandläkare
+						Tandsköterska
 					</p>
 				</div>
 			</div>
@@ -151,69 +151,27 @@
 		<div class="row">
 			<div class="col-md-2">
 				<div class="person text-center">
-					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+					<img src="img/monica_abenius.png" class="img-circle img-responsive">
 
-					<h4>Martin Beiring</h4>
+					<h4>Monica Abenius</h4>
 					<p>
-						Tandläkare
+						Tandhygienist
 					</p>
 				</div>
 			</div>
 
 			<div class="col-md-2">
 				<div class="person text-center">
-					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
+					<img src="img/unknown.png" class="img-circle img-responsive">
 
-					<h4>Martin Beiring</h4>
+					<h4>Unknown</h4>
 					<p>
-						Tandläkare
+						Unknown
 					</p>
 				</div>
 			</div>
 
-			<div class="col-md-2">
-				<div class="person text-center">
-					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
-
-					<h4>Martin Beiring</h4>
-					<p>
-						Tandläkare
-					</p>
-				</div>
-			</div>
-
-			<div class="col-md-2">
-				<div class="person text-center">
-					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
-
-					<h4>Martin Beiring</h4>
-					<p>
-						Tandläkare
-					</p>
-				</div>
-			</div>
-
-			<div class="col-md-2">
-				<div class="person text-center">
-					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
-
-					<h4>Martin Beiring</h4>
-					<p>
-						Tandläkare
-					</p>
-				</div>
-			</div>
-
-			<div class="col-md-2">
-				<div class="person text-center">
-					<img src="img/daniel_edgren.png" class="img-circle img-responsive">
-
-					<h4>Martin Beiring</h4>
-					<p>
-						Tandläkare
-					</p>
-				</div>
-			</div>
+			
 		</div>
 	</div>
 </section>
