--- a/partials/incognito.html
+++ b/partials/incognito.html
@@ -11,6 +11,7 @@
 
 <h4>Vad är Incognito?</h4>
 <p>Incognito bygger på att man sätter tandställningens fästen på insidan av tänderna i tandraden. Tandställningen blir därmed osynlig för din omgivning.</p>
+ <img src="img/incognito.png" class="img-responsive" />
 </br>
 
 <h4>Kan incognito korrigera alla trångställningar och bettfel?</h4>
