--- a/partials/inman.html
+++ b/partials/inman.html
@@ -7,6 +7,7 @@
 
 <h4>Vad är Inman Aligner?</h4>
 <p>Inman Aligner är en avtagbar tandställning som du använder 16-18h/dag. Du väljer själv hur ofta du vill bära den.  Ju oftare desto snabbare resultat. Beroende på sin enkelhet har behandlingen blivit mycket populär. En normal behandling tar ca 12 veckor för ca 80 % av våra fall men kan ta upp till 6 månader vid mer komplicerade situationer. Ca 80% av alla felställningar som vi upplever som ej estetiskt tillfredsställande är oftast möjliga att lösa med Inman Aligner. Metoden är även ett mycket prisvärt alternativ i förhållande till andra estetiska behandlingar och behandlingstiden är relativt snabb.  Behandlingen följs också av alla våra tandläkare som är Inman-certifierade.</p>
+ <img src="img/inman.png" class="img-responsive" />
 
 </br>
  
