--- a/partials/invisalign.html
+++ b/partials/invisalign.html
@@ -7,6 +7,7 @@
 
 <h4>Hur fungerar Invisalign Aligner?</h4>
 <p>Invisalign Aligner består av ett antal nästan osynliga, borttagbara skenor som du varannan vecka byter till en ny uppsättning skenor. Varje skena skräddarsys individuellt och framställs för just dina tänder. Dina tänder flyttas bit för bit tills de nått den slutgiltiga position som din tandläkare har bestämt.</p>
+ <img src="img/invisalign.png" class="img-responsive" />
  </br>
 <h4>Kan Invisalign Aligner korrigera alla trångställningar och bettfel?</h4>
 <p>Invisalign Aligner har hjälpt väldigt många människor till en jämnare tandrad och bättre estetik. Invisalign Aligner fungerar i de flesta fall. En erfaren tandreglerare med Invisalign-certifikat kan utvärdera om detta är en lämplig metod för dina behov.</p>
