--- a/partials/visdomtandskirurgi.html
+++ b/partials/visdomtandskirurgi.html
@@ -40,11 +40,11 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						Rubrik
+						Bra tandvård till rätt pris
 					</h3>
-					<div class="box">&nbsp;</div>
+					<div class="box"><a href="priser"><img src="img/pig.png" class="img-responsive"></a></div>
 					<p class="caption">
-						Vi gör vårt allra bästa för att du ska ...
+						Vårt mål på Beiring Tandklinik är att erbjuda den bästa tandvården till rätt pris. <a href="priser">Läs mer om priser och finansiering.</a>
 					</p>
 				</div>
 			</div>			
@@ -52,7 +52,7 @@
 			<div class="col-md-4">
 				<div class="tile">
 					<h3>
-						<a href="https://www.facebook.com/beiringtandklinik" target="_blank">Hitta oss på Facebook</a>
+						Hitta oss på Facebook
 					</h3>
 					<div class="box"><a href="https://www.facebook.com/beiringtandklinik" target="_blank"><img src="img/grey_facebook.png" class="img-responsive"></a></div>
 					<p class="caption">
