--- a/partials/start.html
+++ b/partials/start.html
@@ -65,7 +65,7 @@
 				<h3>Erfarna tandläkare och specialistkompetenser</h3>
 
 				<p>
-					<button class="btn btn-round btn-yellow">Läs mer om oss</button>
+					<a href="om" class="btn btn-round btn-yellow">Läs mer om oss</a>
 				</p>
 			</div>			
 
@@ -75,7 +75,7 @@
 				<h3>Expertkunskaper inom tandreglering</h3>
 
 				<p>
-					<button class="btn btn-round btn-white">Läs mer om tandreglering</button>
+					<a href="behandlingar/tandreglering" class="btn btn-round btn-white">Läs mer om tandreglering</a>
 				</p>
 			</div>			
 
@@ -85,7 +85,7 @@
 				<h3>Bra priser och finansieringslösningar</h3>
 
 				<p>
-					<button class="btn btn-round btn-white">Läs mer om finansiering</button>
+					<a href="" class="btn btn-round btn-white">Läs mer om finansiering</a>
 				</p>
 			</div>			
 		</div>
