--- a/partials/about.html
+++ b/partials/about.html
@@ -164,9 +164,9 @@
 				<div class="person text-center">
 					<img src="img/unknown.png" class="img-circle img-responsive">
 
-					<h4>Unknown</h4>
+					<h4>Eva Karlsson</h4>
 					<p>
-						Unknown
+						Tandsköterska
 					</p>
 				</div>
 			</div>
