--- a/partials/start.html
+++ b/partials/start.html
@@ -80,12 +80,12 @@
 			</div>			
 
 			<div class="col-md-4 text-center">
-				<img class="img-responsive center-block" src="img/pig.png" />
+				<img class="img-responsive center-block" src="img/pig_round.png" />
 
 				<h3>Bra priser och finansieringslösningar</h3>
 
 				<p>
-					<a href="" class="btn btn-round btn-white">Läs mer om finansiering</a>
+					<a href="priser" class="btn btn-round btn-white">Läs mer om finansiering</a>
 				</p>
 			</div>			
 		</div>
