--- a/partials/directives/call-me-form.html
+++ b/partials/directives/call-me-form.html
@@ -19,7 +19,7 @@
 
 	<div class="col-md-4">
 		<div class="form-group">
-			<button type="submit" ng-click="submit(user)" class="btn btn-yellow form-control" onClick="ga('send', 'event', { eventCategory: 'Ring Mig ', eventAction: 'Ring Mig', eventLabel: 'Ring Mig Contact Form', eventValue: 1000});" ng-disabled="form.telefon.$pristine || form.telefon.$dirty && form.telefon.$invalid">Ring mig</button>
+			<button type="submit" ng-click="submit(user)" class="btn btn-yellow form-control" ng-disabled="form.telefon.$pristine || form.telefon.$dirty && form.telefon.$invalid">Ring mig</button>
 		</div>
 	<div>
 </form>
