After pull from ftp

--- a/partials/about.html
+++ b/partials/about.html
@@ -28,7 +28,7 @@
 		<div class="jumbotron text-center">
 			<h2 class="dark-text">Välkommen till Beiring Tandklinik</h2>
 			<p>
-				Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
+				Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tandtekniker.
 			</p>
 
 		</div>
