New form.php address and forms updated

--- a/partials/directives/contactform-horizontal.html
+++ b/partials/directives/contactform-horizontal.html
@@ -25,8 +25,8 @@
 		<div class="form-group">
 			<select ng-model="user.mottagning" name="klinik" class="form-control">
 				<option value="" selected default>Välj klinik</option>
+				<option>Östra Hamngatan</option>
 				<option>Olskroken</option>
-				<option>Redbergsplatsen</option>
 			</select>
 		</div>
 	</div>
