Justerar text efter brev från Russell

--- a/partials/priser.html
+++ b/partials/priser.html
@@ -12,7 +12,7 @@
 
 				<h3>Unga vuxna 20-24 år</h3>
 
-				<p>Unga vuxna har kostnadsfri tandvård upptill 24 år ålder, om du är bosatt och folkbokförd i Västra Götalandsregionen. <a href="http://www.vgregion.se/sv/Vastra-Gotalandsregionen/Tandvardsenheten/" target="_blank">Läs mer på Tandvårdsenheten här.</a> För tillfället har vi valt att inte förnya vårt avtal med Västra Götalandsregionen, så i dagsläget går det inte att lista sig för fri tandvård som Ung vuxen hos oss. Detta innebär att du oavsett ålder, betalar ordinarie klinikpriser för dina behandlingar. Men du har fortfarande möjlighet till <a href="http://www.forsakringskassan.se/tandvard/statligt_tandvardsstod/allmant_tandvardsbidrag/allmant_tandvardsbidrag" target="_blank">Allmänna Tandvårdsbidraget</a> (ATB) som stöd för undersökning eller behandling.</p>
+				<p>Unga vuxna har kostnadsfri tandvård upptill 24 års ålder, om du är bosatt och folkbokförd i Västra Götalandsregionen. <a href="http://www.vgregion.se/sv/Vastra-Gotalandsregionen/Tandvardsenheten/" target="_blank">Läs mer på Tandvårdsenheten här.</a> För tillfället har vi valt att inte förnya vårt avtal med Västra Götalandsregionen, så i dagsläget går det inte att lista sig för fri tandvård som Ung vuxen hos oss. Detta innebär att du, oavsett ålder, betalar ordinarie klinikpriser för dina behandlingar. Men du har fortfarande möjlighet till <a href="http://www.forsakringskassan.se/tandvard/statligt_tandvardsstod/allmant_tandvardsbidrag/allmant_tandvardsbidrag" target="_blank">Allmänna Tandvårdsbidraget</a> (ATB) som stöd för undersökning eller behandling.</p>
 
 
 
