--- a/partials/tandreglering.html
+++ b/partials/tandreglering.html
@@ -4,7 +4,7 @@
 		
 		<div class="row">
 			<div class="col-md-6">
-				<h3>Vi på Beiring Tandklinik är specialiserade på modern tandreglering. Idag finns det flera metoder att välja mellan när du ska justera ditt bett och leende. Här kan du läsa mer om de som vi arbetar med. </h3>
+				<h3>Vi på Beiring Tandklinik är specialiserade på modern tandreglering. Idag finns det flera metoder att välja mellan när du ska justera ditt bett och leende. Här kan du läsa mer om de som vi arbetar med.</h3>
 			</br>
 			</div>
 
@@ -23,23 +23,23 @@
 				</br>
 
 				<h4>Inman Aligner – snabbaste sättet att få framtänderna på rad</h4>
-				<p>Med Inman Aligner kan vi justera trångställningar, snedställningar och glesställningar som rör framtänderna.  <a href="behandlingar/inman">Läs mer här.</a></p>
+				<p>Med Inman Aligner kan vi justera trångställningar, snedställningar och glesställningar som rör framtänderna. <a href="behandlingar/inman">Läs mer här.</a></p>
 				</br>
 			</div>
 	
 			<div class="col-md-6">
 				<h4>Klassisk tandställning – den traditionella metoden</h4>
-				<p>Med klassisk tandställning(räls) menas att man har tandställningen på utsidan av tänderna.</p>
+				<p>Med klassisk tandställning (räls) menas att man har tandställningen på utsidan av tänderna.</p>
 
-				<p>Med klassisk tandställning går alla bettfel och tandfelställningar att korrigera. Även denna teknik har utvecklats och vi arbetar idag med porslinsfästen på framtänderna som göra att själva tandställningen blir mindre synlig.</p>
+				<p>Med klassisk tandställning går alla bettfel och tandfelställningar att korrigera. Även denna teknik har utvecklats och vi arbetar idag med porslinsfästen på framtänderna som gör att själva tandställningen blir mindre synlig.</p>
 				</br>
 
 				<h5>Hur fungerar klassisk tandställning?</h5>
-				<p>Fästen(Brackets) limmas fast på tänderna. I dessa brackets lägg sedan olika ståltrådar som fästs med små gummiband. Tänderna kan sedan förflyttas utmed ståltråden in i en optimal position utifrån funktion och estetik.</p>
+				<p>Fästen (brackets) limmas fast på tänderna. I dessa brackets läggs sedan olika ståltrådar som fästs med små gummiband. Tänderna kan sedan förflyttas utmed ståltråden in i en optimal position utifrån funktion och estetik.</p>
 				</br>
 
 				<h5>Kan klassisk tandställning korrigera alla bettfel och felställningar?</h5>
-				<p>Ja. Behandlingstiden varierar dock beroende på bettfelets omfattning men är en mycket säker metod för att nå ett gott behandlingsresultat.</p>
+				<p>Ja. Behandlingstiden varierar dock beroende på bettfelets omfattning, men är en mycket säker metod för att nå ett gott behandlingsresultat.</p>
 			</div>
 		</div>	
 
